landing page redesign

--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
 	<script src='js/variables.js'></script>
 
 
-
+<!-- 
 	<script src='js/routers/router.js'></script>
-	
+	 -->
 </head>
 <body>
 	<div id='header'>
@@ -90,12 +90,12 @@
 	<div id='main_wrapper' class='margin-top20'>
 		<div class='wrapper'>
 			<h2 class='tagline fleft'>Learn to diagnose electrical circuits online.</h2>
-			<div id='sign_up'>Enroll Today!</div>
+			<!-- <div id='sign_up'>Enroll Today!</div> -->
 			<div class='clear'></div>
 			<div id='level_container'></div>
 		</div>
 	</div>
-	<div id='mid_wrapper' class='margin-top'>
+<!-- 	<div id='mid_wrapper' class='margin-top'>
 		<div class='wrapper'>
 			<div class='column_3'>
 				<h3>Learn on the Latest Systems</h3>
@@ -122,7 +122,7 @@
 	</div>
 	<div id='bottom_wrapper'>
 
-	<div>
+	<div> -->
 	<div id='footer'>
 	</div>
 </body>
