fixed header styling on landing page

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,12 @@
 			</div>
 			
 			
-			<div>
+			<div class='header-nav'>
+				<a class='green' href="">Learn More</a>
+				<a href="">For Business</a>
+				<a class='red' href="">Sign Up!</a>
+				<a href="">Sign In</a>
+			</div>
 				<form id='sign_in_form' action="/login" method="post">
 						<div id='sign_in'><input id='submit_button' type='submit' value='Sign In'/></div>
 						<div id='sign_in_inputs' class='fright hidden'>
