--- a/public/pages/classroom.html
+++ b/public/pages/classroom.html
@@ -66,7 +66,14 @@
 				<div class='fleft'>
 					<a href='#'><h1>TradePro</h1></a>
 				</div>
-				<div id='subnav_container'>
+				<div class='header-nav'>
+					<a href="#">Home</a>
+					<a href="">Report Card</a>
+					<a href="">Settings</a>
+					<a href="/logout">Logout</a>
+				</div>
+
+				<!-- <div id='subnav_container'>
 					<ul>
 						<li>Dashboard</li>
 						<a href='#'><li>Classes</li></a>
@@ -74,8 +81,8 @@
 						<a href='#/equipment'><li>Equipment</li></a>
 						<a href='#/report'><li>Report Card</li></a>
 					</ul>
-				</div>
-				<a href='/logout'><div id='logout' class='fright'>LogOut</div></a>
+				</div> -->
+			<!-- 	<a href='/logout'><div id='logout' class='fright'>LogOut</div></a> -->
 			</div>
 		</div>
 	</div>
