created learn more page

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 			
 			
 			<div class='header-nav'>
-				<a class='green' href="">Learn More</a>
+				<a class='green' href="pages/learnmore.html">Learn More</a>
 				<a href="">For Business</a>
 				<a class='red' href="">Sign Up!</a>
 				<a id='sign_in'>Sign In</a>
