test timer now working

--- a/public/pages/learnmore.html
+++ b/public/pages/learnmore.html
@@ -28,7 +28,7 @@
 
 		<div class='wrapper'>
 			<div class='fleft'>
-				<a href="/classroom/#0"><h1>TradePro</h1></a>
+				<a href="/"><h1>TradePro</h1></a>
 				
 			</div>
 			
