restyled class list page

--- a/public/pages/learnmore.html
+++ b/public/pages/learnmore.html
@@ -63,7 +63,7 @@
 	<div class='wrapper'>
 			<div class='two-third'>
 				<div class='perk-card'>
-					<h3>Make more money</h3>
+					<h3>Earn more money</h3>
 					<p>HVAC service technicians are the most in demand skilled trade career. Put in the time to learn, and watch your paycheck grow!</p>
 				</div>
 				<div class='perk-card'>
