chapter page styling. problem page styling

--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,9 @@
 				<div id='sign_in_form' class='fright hidden'>
 					<form action='/login' method='post'>
 				        <label>Email:</label>
-				        <input type="text" name="email" value="" />   	
+				        <input type="text" name="email" value="mbahoshy@gmail.com" />   	
 				        <label>Password:</label>
-				        <input type="password" name="password" value=""/>
+				        <input type="password" name="password" value="ross"/>
 				        <input id='submit_button' type='submit' value='Go'/>
 				    </form>
 		    	</div>
