small css changes

--- a/public/pages/classroom.html
+++ b/public/pages/classroom.html
@@ -34,6 +34,7 @@
 
 	<script src="/js/views/classview.js"></script>
 	<script src="/js/views/testslidesview.js"></script>
+	<script src="/js/views/testreportview.js"></script>
 	<!-- <script src="/js/views/lessonlistview.js"></script> -->
 
 
