--- a/public/pages/learnmore.html
+++ b/public/pages/learnmore.html
@@ -98,7 +98,7 @@
 	 -->
 </head>
 <body>
-	<div id='header'>
+	<div id='header' class='header-tall'>
 
 		<div class='wrapper'>
 			<div class='fleft'>
