--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 	 -->
 </head>
 <body>
-	<div id='header'>
+	<div id='header' class='header-tall'>
 
 		<div class='wrapper'>
 			<div class='fleft'>
