index page styling

--- a/public/index.html
+++ b/public/index.html
@@ -39,21 +39,27 @@
 			
 			
 			<div class='header-nav'>
-				<a class='green' href="pages/learnmore.html">Learn More</a>
-				<a href="">For Business</a>
-				<a class='red' href="">Sign Up!</a>
-				<a id='sign_in'>Sign In</a>
+				<div class='fright'>
+					<a class='green' href="pages/learnmore.html">Learn More</a>
+					<a href="">For Business</a>
+					<a class='red' href="">Sign Up!</a>
+					<a id='sign_in'>Sign In</a>
+				</div>
 				<div class='clear'></div>
 				<div id='sign_in_form' class='fright hidden'>
 					<form action='/login' method='post'>
-				        <label>Email:</label>
+				        <label>EMAIL:</label>
 				        <input type="text" name="email" value="" />   	
-				        <label>Password:</label>
+				        <label>PASSWORD:</label>
 				        <input type="password" name="password" value=""/>
 				        <input id='submit_button' type='submit' value='Go'/>
 				    </form>
 		    	</div>
+
 			</div>
+
+
+			<h2 class='tagline fleft'>Learn to diagnose electrical circuits online.</h2>
 		<!-- 		<form id='sign_in_form' action="/login" method="post">
 						<div id='sign_in'><input id='submit_button' type='submit' value='Sign In'/></div>					
 				</form> -->
@@ -93,9 +99,9 @@
 			</div>
 		</div>
 	</div>
-	<div id='main_wrapper' class='margin-top20'>
+	<div id='main_wrapper' class='margin-top40'>
 		<div class='wrapper'>
-			<h2 class='tagline fleft'>Learn to diagnose electrical circuits online.</h2>
+			<!-- <h2 class='tagline fleft'>Learn to diagnose electrical circuits online.</h2> -->
 			<!-- <div id='sign_up'>Enroll Today!</div> -->
 			<div class='clear'></div>
 			<div id='level_container'></div>
