ready to build report card page. datahas been manipulated to serve relevant insights. tagging system nailed down. fixed issue with problem tags not updating

--- a/public/pages/classroom.html
+++ b/public/pages/classroom.html
@@ -35,6 +35,7 @@
 	<script src="/js/views/classview.js"></script>
 	<script src="/js/views/testslidesview.js"></script>
 	<script src="/js/views/testreportview.js"></script>
+	<script src="/js/views/reportcardview.js"></script>
 	<!-- <script src="/js/views/lessonlistview.js"></script> -->
 
 
@@ -64,7 +65,7 @@
 				</div>
 				<div class='header-nav'>
 					<a href="#">Home</a>
-					<a href="">Report Card</a>
+					<a href="#/report">Report Card</a>
 					<a href="">Settings</a>
 					<a href="/logout">Logout</a>
 				</div>
