--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,16 @@
 	<script src="libs/backbone.js"></script>
 	<script src='js/objects.js'></script>
 	<script src='js/variables.js'></script>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+	  ga('create', 'UA-48170172-1', 'tradepro.herokuapp.com');
+	  ga('send', 'pageview');
+
+	</script>
 
 <!-- 
 	<script src='js/routers/router.js'></script>
