display class page styling

--- a/public/pages/classroom.html
+++ b/public/pages/classroom.html
@@ -61,7 +61,7 @@
 		<div id='header_wrapper' class='wrapper'>
 			<div class='relative'>
 				<div class='fleft'>
-					<a href='#'><h1>TradePro</h1></a>
+					<a href='#'><h1>powerpro</h1></a>
 				</div>
 				<div class='header-nav'>
 					<a href="#">Home</a>
