--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
 		<div class='wrapper'>
 			<div class='fleft'>
-				<a href="/"><h1>TradePro</h1></a>
+				<a href="/"><h1>powerpro</h1></a>
 				
 			</div>
 			
